telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestReturnVoid.java
package tests;

class A {

	
	A(String l[]) {
		if(true){
			int a = 1;
		}else {
			return;
		}
		return;
	}
	

}

