telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestReturnFail.java
package tests;

class A {

	
	A(String l[]) {
		if(true){
			int a = 1;
		}else {
			return 3;
		}
		return;
	}
	

}

